rebased MonitoredProcess